# packs-tui

./: Cargo.toml  LICENSE  README.md
.config/: config.json5
.github/workflows/: cd.yml
packs-client/: Cargo.toml
packs-client/src/: lib.rs  pks.rs  pks_tree_node.rs
src/: action.rs  app.rs  components.rs  handler.rs  lib.rs  log.rs  main.rs  menu.rs  packs.rs  ui.rs  utils.rs
src/components/: constants.rs  helpers.rs  home.rs
src/components/helpers/: active_violations.rs  scroll_sortable.rs  stateful_tree.rs  violations_display.rs
src/ui/: actions.rs  packs.rs  shared.rs  style.rs  summary.rs
test/fixtures/app_with_everything/: packwerk.yml
test/fixtures/app_with_everything/packs/admin/dashboard/: package.yml
test/fixtures/app_with_everything/packs/admin/dashboard/app/services/admin/: admin_thing.rb  users.rb
test/fixtures/app_with_everything/packs/admin/pet_manager/app/services/pet_manager/: pet_manager_thing.rb
test/fixtures/app_with_everything/packs/admin/user_manager/: package.yml
test/fixtures/app_with_everything/packs/product_services/cats/app/public/cats/: dash.rb  meow.rb
test/fixtures/app_with_everything/packs/product_services/dogs/: package.yml
tests/fixtures/contains_stale_violations/packs/bar/: package_todo.yml
tests/fixtures/services_contains_stale_violations/packs/product_services/newschool/newbar/: package_todo.yml
tests/fixtures/services_contains_stale_violations/packs/product_services/oldschool/bar/: package_todo.yml
tests/fixtures/services_contains_stale_violations/packs/product_services/oldschool/foo/: package_todo.yml
(+3 files in other folders)
