[package]
name = "packs-tui"
version = "0.1.0"
authors = ["Perry Hertler <perry@hertler.org>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
anyhow = "1.0.76"
pks = { path = "../packs" }
log = { version = "0.4.20", features = [] }
#pks = { git = "https://github.com/perryqh/paths.git", branch = "ph/dependents" }