[package]
name = "packs-tui"
version = "0.1.0"
authors = ["Perry Hertler <perry@hertler.org>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
anyhow = "1.0.76"
#pks = { path = "../packs" }
pks = { git = "https://github.com/perryqh/packs.git", branch = "ph/tui-apis" }
tui-textarea =  "0.4.0"
dirs = "5.0.1"
log = "0.4.20"
log4rs = "1.2.0"
regex = "1.10.2"